Add command for log printing
