# docs/swagger.yaml
@@ -32,6 +32,8 @@ definitions:
         type: string
       p2pNode:
         $ref: '#/definitions/config.P2pNodeConfig'
+      update:
+        $ref: '#/definitions/config.UpdateConfig'
       version:
         type: string
       vpn:
@@ -69,6 +71,8 @@ definitions:
     type: object
   config.P2pNodeConfig:
     properties:
+      autoAcceptAuthRequests:
+        type: boolean
       bootstrapPeers:
         items:
           type: string
@@ -87,6 +91,17 @@ definitions:
         type: string
       reconnectionIntervalSec:
         type: integer
+    type: object
+  config.UpdateConfig:
+    properties:
+      lowestPriorityChan:
+        type: string
+      trayAutoCheckEnabled:
+        type: boolean
+      trayAutoCheckInterval:
+        type: string
+      updateServerURL:
+        type: string
     type: object
   config.VPNConfig:
     properties:
@@ -122,28 +137,6 @@ definitions:
       totalOut:
         type: string
     type: object
-  entity.BootstrapPeerDebugInfo:
-    properties:
-      connections:
-        items:
-          type: string
-        type: array
-      error:
-        type: string
-    type: object
-  entity.ConnectionInfo:
-    properties:
-      address:
-        type: string
-      multiaddr:
-        type: string
-      protocol:
-        type: string
-      relayPeerID:
-        type: string
-      throughRelay:
-        type: boolean
-    type: object
   entity.ConnectionsDebugInfo:
     properties:
       connectedPeersCount:
@@ -163,7 +156,7 @@ definitions:
     properties:
       bootstrapPeers:
         additionalProperties:
-          $ref: '#/definitions/entity.BootstrapPeerDebugInfo'
+          $ref: '#/definitions/p2p.BootstrapPeerDebugInfo'
         type: object
       listenAddress:
         items:
@@ -177,10 +170,14 @@ definitions:
         type: integer
       reachability:
         enum:
-          - Unknown
-          - Public
-          - Private
+        - Unknown
+        - Public
+        - Private
         type: string
+      routingTable:
+        items:
+          $ref: '#/definitions/kbucket.PeerInfo'
+        type: array
       routingTableSize:
         type: integer
     type: object
@@ -191,7 +188,7 @@ definitions:
       peerID:
         type: string
     required:
-      - peerID
+    - peerID
     type: object
   entity.FriendRequestReply:
     properties:
@@ -202,11 +199,13 @@ definitions:
       peerID:
         type: string
     required:
-      - peerID
+    - peerID
     type: object
   entity.GeneralDebugInfo:
     properties:
       uptime:
+        type: string
+      version:
         type: string
     type: object
   entity.KnownPeersResponse:
@@ -217,7 +216,7 @@ definitions:
         type: boolean
       connections:
         items:
-          $ref: '#/definitions/entity.ConnectionInfo'
+          $ref: '#/definitions/p2p.ConnectionInfo'
         type: array
       declined:
         type: boolean
@@ -252,7 +251,7 @@ definitions:
       peerID:
         type: string
     required:
-      - peerID
+    - peerID
     type: object
   entity.PeerInfo:
     properties:
@@ -270,9 +269,9 @@ definitions:
         type: string
       reachability:
         enum:
-          - Unknown
-          - Public
-          - Private
+        - Unknown
+        - Public
+        - Private
         type: string
       serverVersion:
         type: string
@@ -295,7 +294,25 @@ definitions:
       peerID:
         type: string
     required:
-      - peerID
+    - peerID
+    type: object
+  kbucket.PeerInfo:
+    properties:
+      addedAt:
+        description: AddedAt is the time this peer was added to the routing table.
+        type: string
+      id:
+        type: string
+      lastSuccessfulOutboundQueryAt:
+        description: |-
+          LastSuccessfulOutboundQueryAt is the time instant at which we last got a
+          successful query response from the peer.
+        type: string
+      lastUsefulAt:
+        description: |-
+          LastUsefulAt is the time instant at which the peer was last "useful" to us.
+          Please see the DHT docs for the definition of usefulness.
+        type: string
     type: object
   metrics.Stats:
     properties:
@@ -308,19 +325,54 @@ definitions:
       totalOut:
         type: integer
     type: object
+  p2p.BootstrapPeerDebugInfo:
+    properties:
+      connections:
+        items:
+          type: string
+        type: array
+      error:
+        type: string
+    type: object
+  p2p.ConnectionInfo:
+    properties:
+      address:
+        type: string
+      direction:
+        type: string
+      multiaddr:
+        type: string
+      opened:
+        type: string
+      protocol:
+        type: string
+      relayPeerID:
+        type: string
+      throughRelay:
+        type: boolean
+      transient:
+        type: boolean
+    type: object
 host: localhost:8639
 info:
-  contact: { }
+  contact: {}
   description: Anywherelan API
   title: Anywherelan API
   version: "0.1"
 paths:
   /debug/log:
     get:
-      consumes:
-      - application/json
+      parameters:
+      - description: Define number of rows of logs to output. On default prints all.
+        in: query
+        name: logs
+        type: integer
+      - description: Print logs from the beginning
+        in: query
+        name: head
+        type: integer
       produces:
-        - text/plain
+      - text/plain
       responses:
         "200":
           description: log text
@@ -331,8 +383,6 @@ paths:
       - Debug
   /debug/p2p_info:
     get:
-      consumes:
-      - application/json
       produces:
       - application/json
       responses:
@@ -375,7 +425,7 @@ paths:
       consumes:
       - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -385,13 +435,13 @@ paths:
             type: array
       summary: Get ingoing auth requests
       tags:
-        - Peers
+      - Peers
   /peers/get_blocked:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -401,13 +451,13 @@ paths:
             type: array
       summary: Get blocked peers info
       tags:
-        - Peers
+      - Peers
   /peers/get_known:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -421,14 +471,14 @@ paths:
   /peers/get_known_peer_settings:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: Params
-          in: body
-          name: body
-          required: true
-          schema:
-            $ref: '#/definitions/entity.PeerIDRequest'
+      - description: Params
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.PeerIDRequest'
       produces:
       - application/json
       responses:
@@ -473,20 +523,20 @@ paths:
             $ref: '#/definitions/api.Error'
       summary: Invite new peer
       tags:
-        - Peers
+      - Peers
   /peers/remove:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: Params
-          in: body
-          name: body
-          required: true
-          schema:
-            $ref: '#/definitions/entity.PeerIDRequest'
+      - description: Params
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.PeerIDRequest'
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -500,18 +550,18 @@ paths:
             $ref: '#/definitions/api.Error'
       summary: Remove known peer
       tags:
-        - Peers
+      - Peers
   /peers/update_settings:
     post:
       consumes:
-        - application/json
+      - application/json
       parameters:
-        - description: Params
-          in: body
-          name: body
-          required: true
-          schema:
-            $ref: '#/definitions/entity.UpdatePeerSettingsRequest'
+      - description: Params
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.UpdatePeerSettingsRequest'
       produces:
       - application/json
       responses:
@@ -527,13 +577,13 @@ paths:
             $ref: '#/definitions/api.Error'
       summary: Update peer settings
       tags:
-        - Peers
+      - Peers
   /settings/export_server_config:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
@@ -541,13 +591,13 @@ paths:
             $ref: '#/definitions/config.Config'
       summary: Export server configuration
       tags:
-        - Settings
+      - Settings
   /settings/peer_info:
     get:
       consumes:
-        - application/json
+      - application/json
       produces:
-        - application/json
+      - application/json
       responses:
         "200":
           description: OK
